# query-based-rrf

./: .env.example  .env.local  .gitignore  NOTICE  README.md  REPO_OVERVIEW.md  SENSITIVITY_ANALYSIS_README.md  config.py  copy_datasets.sh  create_timing_jsonl_files_verified.py  format_metrics_table.py  get_mean_best_weight.py  helper_3_add_text2csv.py  helper_4_fuse_results_wrrf.py  helper_5_ir_metrics.py  helper_80_split_search_results.py  helper_81_get_top_k_results.py  helper_90_friendly_intervals.py  helper_91_mean_best_weight.py  helper_92_plot_all_dataset_weight_stats.py  helper_93_interval_distribution.py  helper_94_compare_2dp_vs_3dp.py  prepare_sample_data.py  pyproject.toml  reproduce_timing_samples.sh  requirements.txt  rrf_mrr_best_weights_all_weights_final.py  rrf_mrr_s3_best_weights_all_weights.py  rrf_ndcg_best_weights_all_weights_final.py  run_timed_experiments.sh  sample_questions_for_timing.py  sampled_questions_for_timing.json
difference-analysis/roberta/: acord-entire-corpus_rm3_qwen3_test.csv  msmarco_rm3_qwen3_dev.csv  nfcorpus_rm3_qwen3_test.csv  nq_rm3_qwen3_dev.csv  summary_report.md
docs/: REPO_OVERVIEW.md
emnlp-review-response/: rebuttal_r1_pointbypoint.md  rebuttal_r2_pointbypoint.md  rebuttal_r3_pointbypoint.md
error-analysis/: 1-sort_scores_by_error.py  2-top_bottom_predictions_per_method.py  3-query-features-analysis.py  error-analysis-pipeline.py  utils.py
experiment/: experiment-results.md  interval_weight_prompt.json  llm_backend.py  mean_best_weight_prompt.json  test_llm_backend.py
experiment/dynamic-alpha-tuning/: dat-infer-gpt.py  dat-infer.py  dynamic_alpha_tuning.py  postprocess_metrics.py  test_bedrock.py
experiment/llm-fs-ministral-interval-weight/: llm_predict_ministral3.py  llm_predict_ministral3_interval_weight_infer.py
experiment/llm-fs-ministral-mean-best-weight/: llm_predict_ministral3.py  llm_predict_ministral3_mean_best_weight_infer.py
experiment/llm-fs-qwen3-interval-weight/: llm_predict_qwen3.py  llm_predict_qwen3_interval_weight_infer.py
experiment/llm-fs-qwen3-mean-best-weight/: llm_predict_qwen3.py  llm_predict_qwen3_mean_best_weight_infer.py
experiment/llm-qwen3/: llm_predict.py
utils/: aggregate_latency.py  aggregate_metrics.py  analyze_ir_latency_tradeoff.py  combine_results.py  compute_latency_ci.py  compute_latency_ci_per_tier.py  env.py  model_mapping.json  plot_tradeoff.py
(+33 files in other folders)
